--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "agenda": "^0.8.0",
+    "async": "^1.5.2",
     "body-parser": "~1.13.2",
     "cheerio": "^0.20.0",
     "connect-flash": "^0.1.1",
